<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ExamListActivity">

    <TextView
            android:id="@+id/pickAgame"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/pickAGame"
            android:autoSizeMaxTextSize="36dp"
            android:autoSizeMinTextSize="16sp"
            android:autoSizeStepGranularity="4sp"
            android:autoSizeTextType="uniform"
            android:textAlignment="center"
            android:background="@color/aws"
            android:textColor="@color/button2"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="543dp"
            android:orientation="vertical"
            android:weightSum="6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <Button
                android:id="@+id/buttonFive"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/textColor"
                android:drawablePadding="@android:dimen/app_icon_size"
                android:drawableEnd="@mipmap/ic_launcher_foreground"
                android:textAlignment="viewEnd"
                android:text="@string/five"
                android:textSize="16sp" />

        <Button
                android:id="@+id/buttonTen"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textSize="16sp"
                android:layout_weight="1"
                android:background="@color/textColor"
                android:drawablePadding="@android:dimen/app_icon_size"
                android:drawableEnd="@mipmap/ic_launcher_foreground"
                android:textAlignment="viewEnd"
                android:text="@string/ten" />

        <Button
                android:id="@+id/buttonFifteen"
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/textColor"
                android:drawablePadding="@android:dimen/app_icon_size"
                android:drawableEnd="@mipmap/ic_launcher_foreground"
                android:textAlignment="viewEnd"
                android:text="@string/fifteen" />

        <Button
                android:id="@+id/buttonTwenty"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textSize="16sp"
                android:layout_weight="1"
                android:background="@color/textColor"
                android:drawablePadding="@android:dimen/app_icon_size"
                android:drawableEnd="@mipmap/ic_launcher_foreground"
                android:textAlignment="viewEnd"
                android:text="@string/twenty" />

        <Button
                android:id="@+id/buttonThirty"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:background="@color/textColor"
                android:drawablePadding="@android:dimen/app_icon_size"
                android:drawableEnd="@mipmap/ic_launcher_foreground"
                android:textAlignment="viewEnd"
                android:text="@string/thirty" />

        <Button
                android:id="@+id/buttonFifty"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:drawablePadding="@android:dimen/app_icon_size"
                android:drawableEnd="@mipmap/ic_launcher_foreground"
                android:textAlignment="viewEnd"
                android:background="@color/textColor"
                android:text="@string/fifty" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>